sre/kubernetes/examples/app-windows-iis-with-ebs-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows-server-iis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windows-server-iis
  template:
    metadata:
      labels:
        app: windows-server-iis
    spec:
      containers:
        - name: windows-server-iis
          image: mcr.microsoft.com/windows/servercore:1809
          ports:
            - name: http
              containerPort: 80
          imagePullPolicy: IfNotPresent
          command:
            - powershell.exe
            - -command
            - "Add-WindowsFeature Web-Server; Invoke-WebRequest -UseBasicParsing -Uri '<https://dotnetbinaries.blob.core.windows.net/servicemonitor/2.0.1.6/ServiceMonitor.exe>' -OutFile 'C:\\ServiceMonitor.exe'; echo '<html><body><br/><br/><marquee><H1>Hello EKS!!!<H1><marquee></body><html>' > C:\\inetpub\\wwwroot\\default.html; C:\\ServiceMonitor.exe 'w3svc'; "
          volumeMounts:
            - name: persistent-storage
              mountPath: C:\data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: ebs-claim
      nodeSelector:
        kubernetes.io/os: windows
